--- a/app/src/main/res/layout/activity_share.xml
+++ b/app/src/main/res/layout/activity_share.xml
@@ -73,6 +73,19 @@
                     android:textColor="@color/black"
                     android:textSize="22dp" />
 
+                <TextView
+                    android:id="@+id/email1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/yt"
+                    android:textStyle="italic"
+                    android:drawableStart="@drawable/liink"
+                    android:drawablePadding="10dp"
+                    android:padding="10dp"
+                    android:paddingStart="60dp"
+                    android:textColor="@color/black"
+                    android:textSize="22dp" />
+
                 <com.airbnb.lottie.LottieAnimationView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
