--- a/app/src/main/res/layout/activity_book_item_add.xml
+++ b/app/src/main/res/layout/activity_book_item_add.xml
@@ -34,6 +34,7 @@
                 android:layout_marginEnd="18dp"
                 android:drawableStart="@drawable/titlee"
                 android:drawablePadding="10dp"
+                android:inputType="textPersonName"
                 android:hint="Title"
                 android:padding="10dp"
                 android:textColorHint="@color/lavender0"
@@ -55,6 +56,7 @@
                 android:drawableStart="@drawable/authorr"
                 android:drawablePadding="10dp"
                 android:hint="Author's name"
+                android:inputType="textPersonName"
                 android:padding="10dp"
                 android:textColorHint="@color/lavender0"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -90,6 +92,7 @@
                 android:layout_marginStart="18dp"
                 android:layout_marginTop="18dp"
                 android:layout_marginEnd="18dp"
+                android:inputType="textMultiLine"
                 android:drawableStart="@drawable/detailss"
                 android:drawablePadding="10dp"
                 android:hint="Book Summary"
@@ -110,6 +113,7 @@
                 android:drawableStart="@drawable/sellerr"
                 android:drawablePadding="10dp"
                 android:hint="Seller's name"
+                android:inputType="textPersonName"
                 android:padding="10dp"
                 android:textColorHint="@color/lavender0"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -144,6 +148,7 @@
                 android:drawableStart="@drawable/emaill"
                 android:drawablePadding="10dp"
                 android:hint="Seller's mail address"
+                android:inputType="textEmailAddress"
                 android:padding="10dp"
                 android:textColorHint="@color/lavender0"
                 app:layout_constraintBottom_toBottomOf="parent"
