--- a/app/src/main/res/layout/activity_pdf_item_add.xml
+++ b/app/src/main/res/layout/activity_pdf_item_add.xml
@@ -35,6 +35,7 @@
         android:layout_marginEnd="18dp"
         android:drawableStart="@drawable/titlee"
         android:drawablePadding="10dp"
+        android:inputType="textPersonName"
         android:hint="Title"
         android:padding="10dp"
         android:textColorHint="@color/lavender0"
@@ -56,6 +57,7 @@
         android:drawableStart="@drawable/authorr"
         android:drawablePadding="10dp"
         android:hint="Author's name"
+        android:inputType="textPersonName"
         android:padding="10dp"
         android:textColorHint="@color/lavender0"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -94,6 +96,7 @@
         android:drawableStart="@drawable/detailss"
         android:drawablePadding="10dp"
         android:hint="PDF Summary"
+        android:inputType="textMultiLine"
         android:padding="10dp"
         android:textColorHint="@color/lavender0"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -111,6 +114,7 @@
         android:drawableStart="@drawable/sellerr"
         android:drawablePadding="10dp"
         android:hint="Seller's name"
+        android:inputType="textPersonName"
         android:padding="10dp"
         android:textColorHint="@color/lavender0"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -145,6 +149,7 @@
         android:drawableStart="@drawable/emaill"
         android:drawablePadding="10dp"
         android:hint="Seller's mail address"
+        android:inputType="textEmailAddress"
         android:padding="10dp"
         android:textColorHint="@color/lavender0"
         app:layout_constraintBottom_toBottomOf="parent"
