--- a/app/src/main/res/layout/activity_share_buyer.xml
+++ b/app/src/main/res/layout/activity_share_buyer.xml
@@ -61,6 +61,19 @@
                 android:textSize="18dp" />
 
             <TextView
+                android:id="@+id/email2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/apk"
+                android:textStyle="italic"
+                android:drawableStart="@drawable/liink"
+                android:drawablePadding="10dp"
+                android:padding="10dp"
+                android:paddingStart="60dp"
+                android:textColor="@color/black"
+                android:textSize="22dp" />
+
+            <TextView
                 android:id="@+id/email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
